Completed adaptive layout

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,15 @@ title: Proton Trade
             <div class="main-screen__description">Облегчает торговлю на крипторынке</div>
             <div class="main-screen__signup">
                 <div class="main-screen__button">
-                    <button class="signup-button">Попробовать<img src="assets/images/Arrow.svg" alt=""></button>
+                    <a class="signup-button">Попробовать<img src="assets/images/Arrow.svg" alt=""></a>
                 </div>
                 <div class="main-screen__statistics">
                     <img src="assets/images/statistic.svg" alt="">
                     <p>Уже используют: 589 человек</p>
                 </div>
+            </div>
+            <div class="burger">
+                <span>Открыть навигацию</span>
             </div>
         </div>
     </div>
@@ -47,7 +50,7 @@ title: Proton Trade
         <div class="container">
                 
             <div class="capabilities__cards">
-                <div class="capabilities__heading">Наши <br>возможности</div>
+                <div class="capabilities__heading">Наши возможности</div>
                 <div class="capabilities__item">
                     <div class="capabilities__img"><img src="assets/images/capabilities/1.svg" alt=""></div>
                     <div class="capabilities__title">Покажем тренды</div>
@@ -90,7 +93,7 @@ title: Proton Trade
                 </div>
             </div>
         </div>
-    </div>
+    </div> 
 
     <div class="you-get">
         <div class="container">
@@ -127,7 +130,7 @@ title: Proton Trade
         </div>
     </div>
 
-    <div class="demo">
+     <div class="demo">
         <div class="container">
             <div class="demo__subtitle subtitle">Робот-помощник</div>
             <div class="demo__title title">Proton Trade</div>
@@ -184,11 +187,14 @@ title: Proton Trade
                         <input class="contact-us__email" type="text" placeholder="Email">
                         <input class="contact-us__text" type="text" placeholder="Сообщение">
                         <p class="contact-us__info">Нажимая на кнопку «Отправить вопрос», вы даете согласие на обработку персональных данных.</p>
-                        <button class="contact-us__button signup-button" type="submit">Отправить вопрос</button>
+                        <a href="#" class="contact-us__button signup-button" type="submit">Отправить вопрос</a>
                     </form>   
+                </div>
+                <div class="contact-us__lift-btn">
+                    &uarr;
                 </div>
             </div>
         </div>
-    </div>
+    </div>  
 
 </main>
