--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,10 @@ title: Proton Trade
                     <p>Уже используют: 589 человек</p>
                 </div>
             </div>
-            <div class="burger">
-                <span>Открыть навигацию</span>
-            </div>
+            <div class="burger"><span>Открыть навигацию</span></div>
         </div>
     </div>
+
 
     <div class="advantages">
         <div class="container">
