Added Burger Menu

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,35 @@ title: Proton Trade
                     <p>Уже используют: 589 человек</p>
                 </div>
             </div>
-            <div class="burger"><span>Открыть навигацию</span></div>
+
         </div>
     </div>
 
+    <div class="burger">
+        <span>Открыть навигацию</span>
+    </div>
+    
+    <div class="burger-menu">  
+        <nav class="burger-menu__nav">
+            <ul class="burger-menu__list">
+                <li>
+                    <a class="burger-menu__link" href="#" >
+                        Наши возможности
+                    </a>
+                </li>
+                <li >
+                    <a class="burger-menu__link" href="#">
+                        Что вы получаете
+                    </a>
+                </li>
+                <li>
+                    <a class="burger-menu__link" href="#">
+                        Партнеры
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 
     <div class="advantages">
         <div class="container">
