added animation of the appearance of elements when scrolling, and a few minor improvements

--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,15 @@ title: Proton Trade
 <main class="main">
     <div class="main-screen">
         <div class="container">
-            <div class="main-screen__subtitle subtitle">Робот-помощник</div>
-            <div class="main-screen__title title">Proton Trade</div>
-            <div class="main-screen__description">Облегчает торговлю на крипторынке</div>
+            <div class="main-screen__subtitle subtitle anim-items">Робот-помощник</div>
+            <div class="main-screen__title title  anim-items">Proton Trade</div>
+            <div class="main-screen__description anim-items">Облегчает торговлю на крипторынке</div>
             <div class="main-screen__signup">
-                <div class="main-screen__button">
+                <div class="main-screen__button  anim-items">
                     <a class="signup-button">Попробовать<img src="assets/images/Arrow.svg" alt=""></a>
                 </div>
-                <div class="main-screen__statistics">
-                    <img src="assets/images/statistic.svg" alt="">
+                <div class="main-screen__statistics  anim-items">
+                    <img src="assets/images/statistic.svg" alt="" >
                     <p>Уже используют: 589 человек</p>
                 </div>
             </div>
@@ -50,19 +50,19 @@ title: Proton Trade
     <div class="advantages">
         <div class="container">
             <div class="advantages__row">
-                <div class="advantages__item">
+                <div class="advantages__item anim-items">
                     <div class="advantages__value">8 474</div>
                     <div class="advantages__description">Криптовалюты</div>
                 </div>
-                <div class="advantages__item">
+                <div class="advantages__item anim-items">
                     <div class="advantages__value">>$1.5T</div>
                     <div class="advantages__description">Капитализация рынка</div>
                 </div>
-                <div class="advantages__item">
+                <div class="advantages__item anim-items">
                     <div class="advantages__value">>$214Bn</div>
                     <div class="advantages__description">Объем за 24ч</div>
                 </div>
-                <div class="advantages__item" >
+                <div class="advantages__item anim-items" >
                     <div class="advantages__value">61,1%</div>
                     <div id="capabilities" class="advantages__description">BTC Dominance</div>
                 </div>
@@ -73,8 +73,8 @@ title: Proton Trade
     <div class="capabilities">
         <div class="container">        
             <div class="capabilities__cards">
-                <div class="capabilities__heading">Наши возможности</div>
-                <div class="capabilities__item">
+                <div class="capabilities__heading anim-items">Наши возможности</div>
+                <div class="capabilities__item anim-items">
                     <div class="capabilities__img"><img id="capabilities" src="assets/images/capabilities/1.svg" alt=""></div>
                     <div class="capabilities__title">Покажем тренды</div>
                     <div class="capabilities__descript">Робот-помощник анализирует актив и дает рекомендации по направлению торговли на нескольких таймфреймах: H1, М30 и М15
@@ -83,7 +83,7 @@ title: Proton Trade
                     <div class="capabilities__descript">Не рекомендовано торговать в шорт если бот рекомендует торговать в лонг на всех таймфреймах.</div>
                 </div>
 
-                <div class="capabilities__item">
+                <div class="capabilities__item anim-items">
                     <div class="capabilities__img"><img src="assets/images/capabilities/2.svg" alt=""></div>
                     <div class="capabilities__title">Stop lose & Take Profit</div>
                     <div class="capabilities__descript">Робот-помощник анализирует волатильность актива за несколько дней, рассчитывает размер Stop lose и многоуровневый Take profit для возможности максимизации прибыль и минимизации убытков.</div>
@@ -91,7 +91,7 @@ title: Proton Trade
                     <div class="capabilities__descript">Получив рассчитанные Stop lose и Take profit вам остается выставить ордера.</div>
                 </div>
 
-                <div class="capabilities__item">
+                <div class="capabilities__item anim-items">
                     <div class="capabilities__img"><img src="assets/images/capabilities/3.svg" alt=""></div>
                     <div class="capabilities__title">Волатильность</div>
                     <div class="capabilities__descript">Робот-помощник анализирует актив и показывает волатильность в процентах и пунктах.</div>
@@ -99,7 +99,7 @@ title: Proton Trade
                     <div class="capabilities__descript">Чем больше/меньше волатильность, тем больше/меньше должны быть стоп-лос и тейк-профиты.</div>
                 </div>
 
-                <div class="capabilities__item">
+                <div class="capabilities__item anim-items">
                     <div class="capabilities__img"><img src="assets/images/capabilities/4.svg" alt=""></div>
                     <div class="capabilities__title">Ближайшие уровни</div>
                     <div class="capabilities__descript">Робот-помощник анализирует актив и показывает два ближайших ценовых уровня в рамках 500 свечей</div>
@@ -107,7 +107,7 @@ title: Proton Trade
                     <div class="capabilities__descript">Необходимо нанести на график уровни показанные ботом. На этих ценовых уровнях скапливается большая ликвидность. От этих ценовых уровнях будут сильные движения.</div>
                 </div>
 
-                <div class="capabilities__item">
+                <div class="capabilities__item anim-items">
                     <div class="capabilities__img"><img src="assets/images/capabilities/5.svg" alt=""></div>
                     <div class="capabilities__title">Актуальная информация</div>
                     <div class="capabilities__descript">Отображает цену актива в долларах и биткойнах.</div>
@@ -121,39 +121,39 @@ title: Proton Trade
     <div class="you-get" id="you-get">
         <div class="container">
             <div class="you-get__row">
-                <div class="you-get__content">
+                <div class="you-get__content anim-items">
                     <div class="you-get__heading">Что вы получаете</div>
                     <div class="you-get__title">Увеличится % положительных сделок</div>
                     <div class="you-get__descript">При следовании рекомендациям робота-помощника все ваши сделки будут по тренду, что увеличит % положительных сделок.</div>     
                 </div>
-                <div class="you-get__img">
+                <div class="you-get__img anim-items">
                     <img src="assets/images/you-get/1.png" alt="">
                 </div>
             </div>
 
             <div class="you-get__row">
-                <div class="you-get__content">
+                <div class="you-get__content anim-items">
                     <div class="you-get__title">Понятный риск-менеджмент</div>
                     <div class="you-get__descript">Всегда правильные стоп-лос и тейк-профит, расчитаный на основании волатильности инструмента, а не мифические и не понятные 5%, 20%, 30% неизвестно от чего.</div>
                 </div>              
-                <div class="you-get__img">
+                <div class="you-get__img anim-items">
                     <img src="assets/images/you-get/2.png" alt="">
                 </div>
              </div>
 
              <div class="you-get__row">
-                <div class="you-get__content">
+                <div class="you-get__content anim-items">
                     <div class="you-get__title">Уменьшение количества убыточных сделок</div>
                     <div class="you-get__descript">За счет автоматического поиска уровней, вы сможете сократить число не системных сделок совершая сделки от ценовых уровней.</div>
                 </div>
-                <div class="you-get__img">
+                <div class="you-get__img anim-items">
                     <img src="assets/images/you-get/3.png" alt="">
                 </div>
              </div>
         </div>
     </div>
 
-     <div class="demo">
+     <div class="demo anim-items">
         <div class="container">
             <div class="demo__subtitle subtitle">Робот-помощник</div>
             <div class="demo__title title">Proton Trade</div>
@@ -170,26 +170,26 @@ title: Proton Trade
         <div class="container">
             <div class="partners__wrapper">
                 <div class="partners__caption">
-                    <div class="partners__title">Партнеры</div>
-                    <div class="partners__descript">Биржи с которыми мы сотрудничаем</div>
+                    <div class="partners__title anim-items">Партнеры</div>
+                    <div class="partners__descript anim-items">Биржи с которыми мы сотрудничаем</div>
                 </div>
                 <div class="partners__company">
-                    <div class="partners__img">
+                    <div class="partners__img anim-items">
                         <img src="assets/images/company/1.png" alt="">
                     </div>
-                    <div class="partners__img">
+                    <div class="partners__img anim-items">
                         <img src="assets/images/company/2.png" alt="">
                     </div>
-                    <div class="partners__img">
+                    <div class="partners__img anim-items">
                         <img src="assets/images/company/3.png" alt="">
                     </div>
-                    <div class="partners__img">
+                    <div class="partners__img anim-items">
                         <img src="assets/images/company/4.png" alt="">
                     </div>
-                    <div class="partners__img">
+                    <div class="partners__img anim-items">
                         <img src="assets/images/company/5.png" alt="">
                     </div>
-                    <div class="partners__img">
+                    <div class="partners__img anim-items">
                         <img src="assets/images/company/6.png" alt="">
                     </div>
                 </div>
@@ -201,10 +201,10 @@ title: Proton Trade
         <div class="container">
             <div class="contact-us__wrapper">
                 <div class="contact-us__caption">
-                    <div class="contact-us__title">Для связи с нами</div>
-                    <div class="contact-us__descript">Можете задать нам любой вопрос про бота</div>
+                    <div class="contact-us__title anim-items">Для связи с нами</div>
+                    <div class="contact-us__descript anim-items">Можете задать нам любой вопрос про бота</div>
                 </div>
-                <div class="contact-us__form">
+                <div class="contact-us__form anim-items">
                     <form action="">
                         <input  class="contact-us__name" type="text" placeholder="Имя" required>
                         <input class="contact-us__email" type="text" placeholder="Email" required>
@@ -216,6 +216,7 @@ title: Proton Trade
                     <a class="contact-us__lift-btn lift" href="#top">
                         &uarr;
                     </a>    
+                </div>
             </div>
         </div>
     </div>
